# gstreamer_box

./: .clang-format  .gitignore  CMakeLists.txt  ReadMe.md  borrowed_rtp_example.c  gst_thread.cpp  hola_gstreamer.cpp  main.cpp  simple_rtp.cpp  simple_rtp_multicast.cpp  tutorial3.cpp  tutorial8.cpp  tutorial9.cpp
gstr_tests/: CMakeLists.txt  test_appsrc.c  test_multicast.c
include/: GstWrapper.hpp
src/: GstWrapper.cpp
